Code refactored and few tests are added.